[gd_scene load_steps=19 format=2]

[ext_resource path="res://stages/hud/BarBG.png" type="Texture" id=1]
[ext_resource path="res://stages/hud/BarHealth.png" type="Texture" id=2]
[ext_resource path="res://player/RM001/RM001.tscn" type="PackedScene" id=3]
[ext_resource path="res://stages/hud/BarMeter.png" type="Texture" id=4]
[ext_resource path="res://stages/hud/BarHealthFlash.png" type="Texture" id=5]
[ext_resource path="res://stages/stage.gd" type="Script" id=7]
[ext_resource path="res://player/RM003/RM003.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/RM002/RM002.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/RM004/RM004.tscn" type="PackedScene" id=10]
[ext_resource path="res://player/RM001/RM001-IconHUD.png" type="Texture" id=12]
[ext_resource path="res://stages/hud.gd" type="Script" id=13]
[ext_resource path="res://stages/hud/BarMeterFull.png" type="Texture" id=14]
[ext_resource path="res://stages/hud/BarMeterFlash.png" type="Texture" id=15]

[sub_resource type="Animation" id=5]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.513726, 0.513726, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 15 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Full"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.811765, 0.811765, 0.811765, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="BaseStageMob" type="Node2D"]
script = ExtResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="PlayerBar" type="Control" parent="HUD"]
anchor_left = 0.003
anchor_right = 0.128
anchor_bottom = 0.089
margin_left = 0.04
margin_right = 0.0399971
margin_bottom = -0.0200005
rect_pivot_offset = Vector2( 20, 8 )

[node name="Icon" type="TextureRect" parent="HUD/PlayerBar"]
margin_left = 2.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 26.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="HealthBG" type="TextureRect" parent="HUD/PlayerBar"]
margin_left = 15.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HealthFill" type="TextureRect" parent="HUD/PlayerBar"]
margin_left = 16.0
margin_top = -1.0
margin_right = 17.0
margin_bottom = 11.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 6 )
texture = ExtResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/PlayerBar/HealthFill"]
anims/Flash = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="MeterBG" type="TextureRect" parent="HUD/PlayerBar"]
margin_left = 15.0
margin_top = 8.0
margin_right = 63.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="MeterFill" type="TextureRect" parent="HUD/PlayerBar"]
margin_left = 16.0
margin_top = 5.0
margin_right = 17.0
margin_bottom = 17.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 6 )
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/PlayerBar/MeterFill"]
anims/Flash = SubResource( 7 )
anims/Full = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="EnemyBarContainer" type="GridContainer" parent="HUD"]
anchor_left = 0.15
anchor_right = 0.969
anchor_bottom = 0.089
margin_right = 261.92
margin_bottom = 15.98
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 13

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 18

[node name="Background" type="Sprite" parent="StaticBody2D"]
position = Vector2( 160, 90 )
z_index = -2

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D/Background"]
playback_speed = 0.5

[node name="TopBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 36 )

[node name="BotBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 216 )

[node name="RightBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 376, 90 )

[node name="LeftBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -56, 90 )

[node name="World" type="YSort" parent="."]

[node name="RM001" parent="World" instance=ExtResource( 3 )]
position = Vector2( 160, 120 )

[node name="RM002" parent="World" instance=ExtResource( 9 )]
position = Vector2( 160, 120 )

[node name="RM003" parent="World" instance=ExtResource( 8 )]
position = Vector2( 160, 120 )

[node name="RM004" parent="World" instance=ExtResource( 10 )]
position = Vector2( 160, 120 )

[node name="SpawnTimer" type="Timer" parent="World"]
one_shot = true
